fixing buttons issue on small devices

--- a/main.css
+++ b/main.css
@@ -685,6 +685,11 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .text-center {
   text-align: center;
 }
